<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#121212"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TITLE -->
        <TextView
            android:text="@string/app_name"
            android:textColor="#FF8C42"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- ABOUT CARD -->
        <LinearLayout
            android:background="@drawable/orange_card"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/about"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/about_desc"
                android:textColor="#EEEEEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- WHY CARD -->
        <LinearLayout
            android:background="@drawable/orange_card"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/why_app"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/why_desc"
                android:textColor="#EEEEEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- HOW IT WORKS -->
        <LinearLayout
            android:background="@drawable/orange_card"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/how_it_works"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/how_desc"
                android:textColor="#EEEEEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- TERMS -->
        <LinearLayout
            android:background="@drawable/orange_card"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/terms"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/terms_desc"
                android:textColor="#EEEEEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- CLOSE BUTTON -->
        <Button
            android:id="@+id/closeBtn"
            android:text="@string/Close"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FF8C42"
            android:minHeight="50dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>